--- a/test.css
+++ b/test.css
@@ -27,7 +27,7 @@ nav ul {
     list-style-type: none; /* Retirer les puces */
     display: flex; /* Alignement des éléments de la liste en ligne */
     justify-content: center; /* Centre les éléments de la liste */
-    gap: 300px; /* Espace entre les liens */
+    gap: 15rem; /* Espace entre les liens */
     padding: 0;
     margin: 0;
     text-align: center;
