--- a/test.css
+++ b/test.css
@@ -17,7 +17,7 @@ header {
 }
 
 .logo img {
-    max-width: 100%; /* Ajuste la taille du logo sans le déformer */
+    max-width: 50%; /* Ajuste la taille du logo sans le déformer */
     height: auto;
     border-radius: 10%;
     margin-left: 40%;
@@ -27,7 +27,7 @@ nav ul {
     list-style-type: none; /* Retirer les puces */
     display: flex; /* Alignement des éléments de la liste en ligne */
     justify-content: center; /* Centre les éléments de la liste */
-    gap: 15rem; /* Espace entre les liens */
+    gap: 10rem; /* Espace entre les liens */
     padding: 0;
     margin: 0;
     text-align: center;
@@ -48,7 +48,7 @@ nav a:hover {
 }
 
 .image_back img {
-   width: 100%;
+   width: 100vh;
    height: 100vh;
    background-position: center;
    background-repeat: no repeat;
