--- a/test.css
+++ b/test.css
@@ -48,8 +48,8 @@ nav a:hover {
 }
 
 .image_back img {
-   width: 100vh;
-   height: 100vh;
+   width: 100%;
+   height: 100%;
    background-position: center;
    background-repeat: no repeat;
    object-fit: cover; /*permet de garder limage au bonne dimension*/
