--- a/test.css
+++ b/test.css
@@ -49,7 +49,7 @@ nav a:hover {
 
 .image_back img {
    width: 100%;
-   height: 100%;
+   height: 100vh;
    background-position: center;
    background-repeat: no repeat;
    object-fit: cover; /*permet de garder limage au bonne dimension*/
