--- a/test.css
+++ b/test.css
@@ -38,7 +38,7 @@ nav a {
     color: rgb(255, 255, 255);
     text-decoration: none;
     font-size: 1rem;
-    padding: 5px 10px;
+    padding: 0.313px 0.625rem;
 }
 
 nav a:hover {
