--- a/test.css
+++ b/test.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -32,8 +36,7 @@ nav ul {
     padding: 0;
     margin: 0;
     text-align: center;
-
-
+    left-margin: 5% ;
     
 
 }
@@ -50,6 +53,7 @@ nav a:hover {
     background-color: #ffffff; /* Ajoute un fond légèrement gris au survol */
     border-radius: 10px; /* Arrondi les bords au survol */
 }
+
 
 .image_back img {
    width: 100%;
