--- a/qui.css
+++ b/qui.css
@@ -69,11 +69,10 @@ nav a:hover {
     width: calc(100vw * 12); /* 100% par image x 3 */
     animation: slide 30s infinite linear;
 }
-
-.carousel-images img {
+    .carousel-images img {
     width: 100vw;
     height: 80vh;
-    object-fit: cover;
+    object-fit: contain; /* Affiche toute l'image sans la couper */
     flex-shrink: 0;
 }
 
