--- a/courspart.css
+++ b/courspart.css
@@ -147,5 +147,11 @@ footer {
         flex-direction: column; /* Menu vertical */
         gap: 10px; /* Moins d’espace entre les liens */
     }
+    .item img{
+    width: 80%;
+    margin: 5% 4.5%;
+    align-items: center;
+    animation: fadeIn 5s ease-in-out;
+    display : column;
 
 
