--- a/test.css
+++ b/test.css
@@ -61,7 +61,7 @@ nav a:hover {
    background-repeat: no-repeat;
    object-fit: cover; /* Permet de garder l'image aux bonnes dimensions */
 }
-.image_back_phone img{
+.image_phone img{
     display : none;
 }
 
@@ -88,10 +88,12 @@ nav a:hover {
         width: 100%;
         height: auto; /* Évite le dépassement */
     }
-    .image_back_phone img{
-    display : center;
-     width: 100%;
-     height: auto;
+
+
+    .image_phone img {
+        display : center;
+        width: 100%;
+        height: auto;
 }
 
     .cours h1 {
