--- a/test.css
+++ b/test.css
@@ -59,7 +59,7 @@ nav a:hover {
 
 
 /* ADAPTATION POUR MOBILE */
-@media (max-width: 768px) {
+@media (max-width: 899px) {
     header {
         flex-direction: column;
         padding: 20px 10px; /* Réduit l’espace */
@@ -84,7 +84,7 @@ nav a:hover {
 
 
     .image_phone img {
-        display : center;
+        display : block;
         width: 100%;
         height: auto;
 }
@@ -95,7 +95,7 @@ nav a:hover {
     }
 }
 
-@media (min-width: 800px)
+@media (min-width: 900px)
 .image_phone img {
     display : none;
 }
