--- a/test.css
+++ b/test.css
@@ -68,7 +68,7 @@ nav a:hover {
 @media (max-width: 899px) {
     header {
         flex-direction: column;
-        padding: 1.25rem 0.625rem;
+        padding: 20px 0.625rem;
         text-align: center;
     }
 
