--- a/qui.css
+++ b/qui.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -14,7 +8,8 @@ body {
 header {
     display: flex;
     justify-content: space-between; /* Sépare le logo des liens */
-    align-items: center; /* Aligne les éléments verticalement au centre */
+    align-items: center; /*
+    Aligne les éléments verticalement au centre */
     padding: 100px 10px; /* Espace autour de l'en-tête */
     background-color: #00025e; /* Couleur de fond de l'en-tête */
     color: rgb(32, 22, 226);
@@ -23,7 +18,7 @@ header {
 }
 
 .logo img {
-    max-width: 100%; /* Ajuste la taille du logo sans le déformer */
+    max-width: 50%; /* Ajuste la taille du logo sans le déformer */
     height: auto;
     border-radius: 10%;
     margin-left: 40%;
@@ -33,18 +28,20 @@ nav ul {
     list-style-type: none; /* Retirer les puces */
     display: flex; /* Alignement des éléments de la liste en ligne */
     justify-content: center; /* Centre les éléments de la liste */
-    gap: 300px; /* Espace entre les liens */
+    gap: 10rem; /* Espace entre les liens */
     padding: 0;
     margin: 0;
     text-align: center;
+   
+    
 
 }
 
 nav a {
     color: rgb(255, 255, 255);
     text-decoration: none;
-    font-size: 50px;
-    padding: 5px 10px;
+    font-size: 1rem;
+    padding: 0.313px 0.625rem;
 }
 
 nav a:hover {
@@ -52,8 +49,11 @@ nav a:hover {
     background-color: #ffffff; /* Ajoute un fond légèrement gris au survol */
     border-radius: 10px; /* Arrondi les bords au survol */
 }
-
-
+nav a:hover {
+    color: #090202; /* Changer la couleur au survol */
+    background-color: #ffffff; /* Ajoute un fond légèrement gris au survol */
+    border-radius: 10px; /* Arrondi les bords au survol */
+}
 .carousel {
     width: 100vw;
     height: 100vh;
