--- a/contact.css
+++ b/contact.css
@@ -49,6 +49,12 @@ nav a:hover {
     background-color: #ffffff; /* Ajoute un fond légèrement gris au survol */
     border-radius: 10px; /* Arrondi les bords au survol */
 }
+.tarifs img{
+    width: 40%;
+    margin: 5% 4.5%;
+    align-items: center;
+    animation: fadeIn 5s ease-in-out;
+    }
 @media (max-width: 768px) {
     header {
         flex-direction: column;
