--- a/contact.css
+++ b/contact.css
@@ -58,11 +58,18 @@ nav a:hover {
     background-color: #ffffff; /* Ajoute un fond légèrement gris au survol */
     border-radius: 10px; /* Arrondi les bords au survol */
 }
-.pres img{
-    width: 5000%;
-    margin: 5% 4.5%;
-    align-items: center;
-    }
+
+.pres, .visio {
+    display: flex;
+    justify-content: center; /* centre horizontalement */
+    gap: 20px; /* espace entre les images */
+    margin: 20px 0; /* marge entre les sections */
+}
+
+.pres img, .visio img {
+    width: 300px;
+    height: auto;
+}
 @media (max-width: 768px) {
     header {
         flex-direction: column;
